...
        Text(
            text = stringResource(R.string.from, budget.totalAmount),
            fontStyle = FontStyle.Italic,
            fontSize = 16.sp,
            color = MaterialTheme.colorScheme.onSurfaceVariant,
            style = MaterialTheme.typography.bodyMedium,
            modifier = Modifier.testTag("BudgetTextsTotalAmount")
        )
        Text(
            text = stringResource(R.string.days_left, getDaysFromNow(budget.endDate)),
            fontSize = 16.sp,
            color = MaterialTheme.colorScheme.onSurfaceVariant,
            style = MaterialTheme.typography.bodyMedium
...
